--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eliot Lepoittevin Portfolio</title>
   </head>
@@ -36,7 +36,7 @@
     </div>
 
     
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
 
 
   </body>
